<resources>
    <string name="app_name">片刻学习</string>

    <string name="sure">确定</string>
    <string name="share">分享</string>
    <string name="fans">粉丝</string>
    <string name="forget_password">忘记密码？</string>
    <string name="login">登录</string>
    <string name="cancel">取消</string>
    <string name="register">注册</string>
    <string name="photo_number">手机号</string>
    <string name="validate_code">验证码</string>
    <string name="get_validate_code">获取验证码</string>
    <string name="count_down_regex_text">%s S</string>
    <string name="title_home">首页</string>
    <string name="title_news">动态</string>
    <string name="title_mine">我的</string>
    <string name="title_message">消息</string>
    <string name="title_recent">最近浏览</string>
    <string name="title_task">每日任务</string>
    <string name="title_all">全部分类</string>
    <string name="title_find">发现</string>
    <string name="title_follow">关注</string>
    <string name="title_follow_list">关注列表</string>
    <string name="title_fans_list">粉丝列表</string>
    <string name="title_mine_kind">我的分类</string>
    <string name="title_mine_card">我的卡片</string>
    <string name="title_update">有新版本啦</string>
    <string name="title_about">关于</string>
    <string name="title_setting">设置</string>
    <string name="title_modify_user_name">修改昵称</string>
    <string name="title_share_fans">分享给粉丝</string>
    <string name="menu_item_new_kind">创建分类</string>
    <string name="menu_item_new_card">创建卡片</string>
    <string name="menu_send_post">动态</string>
    <string name="login_method">登录方式</string>
    <string name="login_failure">登录失败</string>
    <string name="login_success">登录成功</string>
    <string name="hint_input_kind_name">客官请输入</string>
    <string name="kind_name">分类名字：</string>
    <string name="kind_name_is_empty">分类名字为空</string>
    <string name="kind_name_select">请选择你喜爱的封面</string>
    <string name="cover_is_empty">封面为空</string>
    <string name="new_failure">创建失败</string>
    <string name="new_success">创建成功</string>
    <string name="kind_nam_exist">名字已经存在了哦！</string>
    <string name="card_count_regex_text">卡片数: %s ></string>
    <string name="empty_data">暂无数据</string>
    <string name="select_image">请选择图片</string>
    <string name="answer_title">请确认你的答案</string>
    <string name="hint_answer">你的答案是？</string>
    <string name="image_not_select">未选择图片哟!</string>
    <string name="image_not_edit">图片未编辑哦，请点击图片进入编辑页面!</string>
    <string name="answer_empty">答案为空哦！</string>
    <string name="title_make_card">制作卡片</string>
    <string name="title_edit_image">编辑图片</string>
    <string name="item_edit_old_image">原图编辑</string>
    <string name="item_edit_new_image">新图编辑</string>
    <string name="edit_success">编辑成功</string>
    <string name="edit_failure">编辑失败</string>
    <string name="no_edit">没有进行任何编辑！</string>
    <string name="browse_old_image">查看原图</string>
    <string name="browse_edit_image">查看新图</string>
    <string name="answer_regex">答案：%s</string>
    <string name="daily_task">每日任务</string>
    <string name="sign">签到</string>
    <string name="signed">已签到</string>
    <string name="daily_sign">每日签到</string>
    <string name="daily_card">每日卡片</string>
    <string name="complete">去完成</string>
    <string name="completed">已完成</string>
    <string name="sign_success">签到成功, 学习积分+5</string>
    <string name="commit_success">完成成功, 学习积分+20</string>
    <string name="sign_failure">签到失败</string>
    <string name="share_new_things">分享新鲜事…</string>
    <string name="album">相册</string>
    <string name="title_send_post">分享新鲜事</string>
    <string name="share_success">分享成功</string>
    <string name="share_failure">分享失败</string>
    <string name="post">新鲜事</string>
    <string name="share_content_empty">分享内容为空哦！</string>
    <string name="regex_like_count">等%s人觉得很赞</string>
    <string name="reply">回复</string>
    <string name="send_message">撩ta</string>
    <string name="follow">关注</string>
    <string name="followed">已关注</string>
    <string name="regex_user_profile">%s 的个人主页</string>
    <string name="regex_fans_count">粉丝：%s</string>
    <string name="regex_follow_count">关注：%s</string>
    <string name="regex_score_count">学习积分：%s</string>
    <string name="delete">删除</string>
    <string name="update_avatar">从相册中选择头像</string>
    <string name="content_about">片刻学习，一款集学习和吹牛的App</string>
    <string name="current_version">当前版本</string>
    <string name="check_update">检查更新</string>
    <string name="version_is_newest">当前版本已经是最新的!</string>
    <string name="content_update">确定下载最新版本吗？</string>
    <string name="modify_failure">修改失败</string>
    <string name="modify_success">修改成功</string>
    <string name="input_new_nick_name">请输入你的新昵称</string>
    <string name="nick_name_empty">昵称为空!</string>
    <string name="share_content">我已经完成了今天的学习任务，快来跟我一起学习吧#088.png##088.png#</string>
    <string name="sure_share">确定分享吗？</string>
    <plurals name="error_over_count">
        <item quantity="one">You can only select one media file</item>
        <item quantity="many">You can only select up to %1$d media files</item>
    </plurals>
</resources>
