<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/login_logo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@mipmap/login_logo"
        app:layout_constraintBottom_toTopOf="@id/phone_number"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <EditText
        android:id="@+id/phone_number"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/bg_login_editext"
        android:hint="@string/photo_number"
        app:layout_constraintBottom_toTopOf="@id/validate_code"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_logo" />

    <EditText
        android:id="@+id/validate_code"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/bg_login_editext"
        android:hint="@string/validate_code"
        app:layout_constraintBottom_toTopOf="@id/login"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/count_down"
        app:layout_constraintTop_toBottomOf="@id/phone_number" />

    <com.example.pby.gam_study.page.login.widget.CountDownTextView
        android:id="@+id/count_down"
        android:layout_width="100dp"
        android:layout_height="0dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/bg_validate_code_textview_unclick"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:text="@string/get_validate_code"
        android:textSize="@dimen/text_size_16"
        app:layout_constraintBottom_toBottomOf="@id/validate_code"
        app:layout_constraintLeft_toRightOf="@id/validate_code"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/validate_code" />

    <Button
        android:id="@+id/login"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/bg_login_button"
        android:text="@string/login"
        android:textColor="@color/color_001"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/validate_code" />

</android.support.constraint.ConstraintLayout>