<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white">

    <TextView
        android:id="@+id/edit_old"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_item"
        android:gravity="center"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/item_edit_old_image"
        android:textColor="@color/color_item_dark"
        android:textSize="@dimen/text_size_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/line1"
        android:layout_width="0dp"
        android:layout_height="0.5dp"
        android:background="@color/line_color"
        app:layout_constraintTop_toBottomOf="@id/edit_old" />

    <TextView
        android:id="@+id/edit_new"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_item"
        android:gravity="center"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/item_edit_new_image"
        android:textColor="@color/color_item_dark"
        android:textSize="@dimen/text_size_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/line1" />

    <View
        android:id="@+id/line2"
        android:layout_width="0dp"
        android:layout_height="10dp"
        android:background="@color/line_color"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_new" />

    <TextView
        android:id="@+id/cancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_item"
        android:gravity="center"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/cancel"
        android:textColor="@color/color_item_dark"
        android:textSize="@dimen/text_size_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/line2" />
</android.support.constraint.ConstraintLayout>